# aieev-chatbot-sample

./: .ruff.toml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/: main.py
