[tool.poetry]
name = "aieev-chatbot-sample"
version = "0.1.0"
description = ""
authors = ["Youngsup Oh <ohing504@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.37.1"
openai = "^1.39.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
